@@ -1,8 +1,8 @@
 {
-  "version": "1.2.1-*",
+  "version": "1.2.2-*",
   "title": "ASP.NET MVC 6 Boilerplate Framework",
   "description": "Provides boilerplate framework code for an ASP.NET MVC project. ASP.NET MVC Boilerplate is a professional template for building secure, fast, robust and adaptable web applications or sites. It provides the minimum amount of code required on top of the default MVC template provided by Microsoft. You can download the ASP.NET MVC Boilerplate project template on the Visual Studio Gallery or download the code on GitHub.",
-  "releaseNotes": "RedirectToCanonicalUrlAttribute fix for AppendTrailingSlash=false. OpenGraphMedia fixed to support HTTP schemes. It was using the HTTP port for the HTTPS URL. The Twitter and Open Graph HTML helpers are now also tag helpers and can be used as such. The Twitter and Open Graph HTML helpers have been moved to the Boilerplate.Web.Mvc.TagHelpers namespace.",
+  "releaseNotes": "RedirectToCanonicalUrlAttribute  and NoTrailingSlashAttribute updated to use the new ASP.NET 5 API's.",
   "authors": [ "Muhammad Rehan Saeed (RehanSaeed.com)" ],
   "owners": [ "Muhammad Rehan Saeed (RehanSaeed.com)" ],
   "copyright": "@ Muhammad Rehan Saeed. All rights Reserved",
